# zephyr-template

./: README.md  west.yml
app/: CMakeLists.txt  prj.conf
